# django_webshop

./: .env.template  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_add_fixtures.sh  docker_add_sample_data.sh  entrypoint.sh  nginx.conf  pyproject.toml
backend/: .flake8  requirements.txt
backend/webshop/: conftest.py  db.sqlite3  pytest.ini
backend/webshop/account/: admin.py  models.py  serializers.py  views.py
backend/webshop/configurations/: admin.py  models.py
backend/webshop/fixtures/: sample_data.json
backend/webshop/payments/: models.py  serializers.py  views.py
backend/webshop/products/: admin.py  common.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/webshop/tests/: common.py
backend/webshop/webshop/: common.py  middlewares.py  settings.py  test_settings.py
diploma-backend/: .env.template  .flake8  requirements.txt
diploma-backend/webshop/: db.sqlite3
diploma-backend/webshop/account/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
diploma-backend/webshop/configurations/: admin.py  models.py
diploma-backend/webshop/fixtures/: sample_data.json
diploma-backend/webshop/payments/: models.py  serializers.py  urls.py  views.py
diploma-backend/webshop/products/: admin.py  common.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
diploma-frontend/: setup.cfg
diploma-frontend/diploma_frontend.egg-info/: PKG-INFO  SOURCES.txt
frontend/: README.md  setup.cfg
frontend/frontend.egg-info/: PKG-INFO
frontend/swagger/: swagger.yaml
(+89 files in other folders)
