[tool.poetry]
name = "webshop"
version = "0.1.0"
description = ""
authors = ["Aleksandr Gladkikh <20492198+galexla@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
django-debug-toolbar = "^4.3.0"
django-request-logging = "^0.7.5"
pillow = "^10.3.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
frontend = {path = "frontend/dist/frontend-0.6.tar.gz"}
django-pytest = "^0.2.0"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
